Fully set up Foundation Sass files and JS for smooth full-screen-hero template.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,10 @@
   </head>
 
   <body>
-    <%= yield %>
-
+    <main>
+      <%= yield %>
+    </main>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/foundation.min.js"></script>
   </body>
 </html>
