--- a/app/assets/stylesheets/heros.scss
+++ b/app/assets/stylesheets/heros.scss
@@ -1,3 +1,6 @@
 // Place all the styles related to the Heros controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+main {
+  padding: 0 10px;
+}
