--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,22 +1,11 @@
 <div class="hero-full-screen">
   <div class="top-content-section">
-    <div class="top-bar">
-      <div class="top-bar-left">
-        <ul class="menu">
-          <li class="menu-text"><img src="http://placehold.it/75x30" alt="logo"></li>
-          <li><a href="#">One</a></li>
-          <li><a href="#">Two</a></li>
-          <li><a href="#">Three</a></li>
-        </ul>
-      </div>
-    </div>
   </div>
-  <p id="notice"><%= notice %></p>
 
   <div class="middle-content-section">
-    <h1>Super Compelling Headline</h1>
-    <button class="button large">Button</button>
-    <button class="button large">Button</button>
+    <h1>Fizzbuzz Heroes</h1>
+    <!-- <button class="button large">Button</button>
+    <button class="button large">Button</button> -->
   </div>
 
   <div class="bottom-content-section" data-magellan data-threshold="-50">
@@ -26,7 +15,7 @@
 </div>
 
 <div id="content-section" data-magellan-target="content-section" class="row column small-10" style="padding-top: 2rem;">
-
+  <p id="notice"><%= notice %></p> 
   <p style="margin-bottom: 2rem;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis quae tenetur eius doloribus vel? Itaque, placeat voluptatibus? Sit soluta accusantium adipisci. Numquam dolorem quaerat sunt, qui nostrum cum beatae ratione.</p>
   <img style="margin-bottom: 2rem;" src="http://placehold.it/1200x500/333" alt="">
 
